--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,18 @@
-<span>This is the about page</span>
+<div class="p-about-wrapper">
+	<div class="p-about-main-left">
+		<div class="p-about-left-header">
+			<span>What I do:</span>
+		</div>
+		<div class="p-about-left-subject">
+			<ul>
+				<li>Learn...</li>
+				<li>Write all things web...</li>
+				<li>Laugh alot...</li>
+				<li>And more...</li>
+			</ul>
+		</div>
+	</div>
+	<div class="p-about-main-right">
+		
+	</div>
+</div>
