--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,1 +1,5 @@
-<span>This is the home</span>
+<div class="pyro-title-wrapper" >
+	<p class="pyro-title-name">PyroDev</p>
+	<p class="pyro-title-slogan">PUT SOME FIRE IN IT</p>
+	<p class="pyro-title-slogan">Currently Building. Pardon the Smoke...</p>
+</div>
