Reset the CSS, with styling to about and footer.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 <div class="pyro-title-wrapper" >
-	<p class="pyro-title-name">PyroDev</p>
-	<p class="pyro-title-slogan">PUT SOME FIRE IN IT</p>
-	<p class="pyro-title-slogan">Currently Building. Pardon the Smoke...</p>
+	<h1 class="pyro-title-name">PyroDev</h1>
+	<h2 class="pyro-title-slogan">PUT SOME FIRE IN IT</h2>
+	<h2 class="pyro-title-slogan">Currently Building. Pardon the Smoke...</h2>
 </div>
