--- a/app/css/pyrodev.css
+++ b/app/css/pyrodev.css
@@ -1,3 +1,68 @@
+/*========Theme with Comments ========
+white: #ecf0f1;
+black: #34495e;
+orange: #e67e22;
+
+
+
+
+==============End Comments ============*/
+
+/*============HTML RESET =================*/
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*============HTML RESET -END =================*/
+
+
+
+
 body, html{
 	height: 100%;
 	width: 100%;
@@ -5,12 +70,40 @@ body, html{
 }
 
 /*===========Helpers==========*/
+
 a, u{
 	text-decoration: none;
 }
 a{
 	text-decoration: none !important;
 }
+
+
+
+/*==========ODDS AND ENDS============*/
+.pyro-def{
+	color:#e67e22;
+}
+.pyro-links{
+	display:inline-block;
+	color:#e67e22;
+	float:left;
+	list-style: none;
+	width:40%;
+	margin:0;
+	padding-left: 50px;
+}
+.pyro-links li{
+	display:inline;
+	float:left;
+}
+.pyro-links li i{
+	display:block;
+	width: 25%;
+	margin: 5px 15px 0px 0px;
+}
+
+/*==========ODDS AND ENDS - END============*/
 
 .pyro-back-cover{
 	position: absolute;
@@ -25,8 +118,8 @@ a{
 .pyro-nav{
 	height: 80px;
 	width: 100%;
-	background-color: black;
-	color: white;
+	background-color: #34495e;
+	color: #ecf0f1;
 }
 .pyro-nav-container{
 	width: 90%;
@@ -36,10 +129,10 @@ a{
 	float: left;
 	font-size: 48px;
 	margin-top: 10px;
-	color:white;
+	color:#ecf0f1;
 }
 .pyro-logo{
-	color:white;
+	color:#ecf0f1;
 }
 .pyro-nav-link-wrapper{
 	float:right;
@@ -51,7 +144,7 @@ a{
 	margin-top: 20px;
 }
 .pyro-nav-link{
-	color:white;
+	color:#ecf0f1;
 }
 
 .main-container{
@@ -64,13 +157,14 @@ a{
 }
 
 .pyro-footer{
-	position:fixed; 
+	position:fixed;
+	font-size: 40px; 
 	bottom: 0; 
 	width: 100%; 
 	left:0; 
 	height: 50px; 
-	background-color: black; 
-	color:white; 
+	background-color: #34495e; 
+	color:#e67e22; 
 	text-align:center;
 }
 
@@ -82,13 +176,15 @@ a{
 	text-align: center;
 	width: 90%;
 	position: absolute;
-	color: white;
+	color: #ecf0f1;
 }
 .pyro-title-name{
 	font-size: 150px;
+	margin: 50px 0px 50px 0px;
 }
 .pyro-title-slogan{
 	font-size: 50px;
+	margin-bottom: 50px;
 }
 .pyro-title-sub-1{
 	font-size: 40px;
@@ -107,7 +203,59 @@ a{
 	height: 800px;
 	width: 100%;
 }
-
-.p-about-left-subject{
-	height
+.p-about-header{
+	width: 90%;
+	height: 400px;
+	text-align:center;
 }
+.p-about-header-label{
+	font-size: 50px;
+	display: block;
+	width: 100%;
+	text-align: left;
+	color: #ecf0f1;
+	margin-top: 40px;
+}
+.p-about-header-text{
+	font-size: 80px;
+	display: block;
+	margin-top: 50px;
+	width: 70%;
+	float: left;
+	color:#ecf0f1; 
+	text-align: left;
+}
+.p-about-header-resume{
+	font-size: 40px;
+	display: block;
+	float: left;
+	margin-top: 265px;
+	width: 30%;
+	color:#ecf0f1; 
+}
+.p-about-main-left{
+	width:72%;
+	float:left;
+}
+.p-about-left-text{
+	color: #ecf0f1;
+	font-size: 30px;
+	width: 47%;
+	margin-right: 10px;
+	text-align:center;
+	float:left;
+}
+.p-about-main-right{
+	width:20%;
+	float:left;
+}
+.p-about-right-text{
+	color: #ecf0f1;
+	font-size: 30px;
+	width: 100%;
+	margin-right: 5%;
+	text-align: left;
+	float: left;
+	height: 100%;
+}
+
