--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,18 +1,25 @@
 <div class="p-about-wrapper">
+	<div class="p-about-header">
+		<span class="p-about-header-label">About Me</span>
+		<span class="p-about-header-text">My name is Patrick and I believe the best things are forged in fire.</span>
+		<span class="p-about-header-resume"	> Resume</span>
+	</div>
 	<div class="p-about-main-left">
-		<div class="p-about-left-header">
-			<span>What I do:</span>
-		</div>
-		<div class="p-about-left-subject">
-			<ul>
-				<li>Learn...</li>
-				<li>Write all things web...</li>
-				<li>Laugh alot...</li>
-				<li>And more...</li>
-			</ul>
-		</div>
+		<p class="p-about-left-text">
+			I was born in Alaska and have traveled and lived all over the United States. I currently live in Florida where the sun is much more popular than the cloudy grey skies I am all to familiar with in Michigan.
+		</p>
+		<p class="p-about-left-text">
+			I got the nickname "Pyro" (<a class="pyro-def" href="http://dictionary.reference.com/browse/pyro">definition</a>) from my colleagues who affectionately realized my affinity for getting things done in a timely manner, all while setting the code metaphorically "on fire." 
+		</p>
+		<div style="clear:both"></div>
+		<p class="p-about-left-text">
+			As a developer, I strive to write clean, testable, maintainable code while still having a fun environment around in which everyone still learns and smiles. I have an affinity for javascript as well as some really well designed user interfaces.
+		</p>
+		<p class="p-about-left-text">
+			I love writing code. If you would like for me to help you build something, I would be honored. Contact information to the RIGHT.
+		</p>
 	</div>
 	<div class="p-about-main-right">
-		
+		<span class="p-about-right-text">This is where the contact information will be.</span>
 	</div>
 </div>
