Fixed about and Contact info

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,8 +1,8 @@
 <div class="p-about-wrapper">
 	<div class="p-about-header">
-		<span class="p-about-header-label">About Me</span>
-		<span class="p-about-header-text">My name is Patrick and I believe the best things are forged in fire.</span>
-		<span class="p-about-header-resume"	> Resume</span>
+		<h2 class="p-about-header-label">About Me</h2>
+		<h2 class="p-about-header-text">My name is Patrick and I believe the best things are forged in fire.</h2>
+		<h3 class="p-about-header-resume"	> Resume</h3>
 	</div>
 	<div class="p-about-main-left">
 		<p class="p-about-left-text">
@@ -11,7 +11,7 @@
 		<p class="p-about-left-text">
 			I got the nickname "Pyro" (<a class="pyro-def" href="http://dictionary.reference.com/browse/pyro">definition</a>) from my colleagues who affectionately realized my affinity for getting things done in a timely manner, all while setting the code metaphorically "on fire." 
 		</p>
-		<div style="clear:both"></div>
+		<!-- <div style="clear:both"></div> -->
 		<p class="p-about-left-text">
 			As a developer, I strive to write clean, testable, maintainable code while still having a fun environment around in which everyone still learns and smiles. I have an affinity for javascript as well as some really well designed user interfaces.
 		</p>
@@ -20,6 +20,12 @@
 		</p>
 	</div>
 	<div class="p-about-main-right">
-		<span class="p-about-right-text">This is where the contact information will be.</span>
+		<span class="p-about-right-text">
+			<p>2735 SW 35th Place</p>
+			<p>1601 Casablanca West</p>
+			<p>Gainesville, Fl 32608</p>
+			<p>810.931.3277</p>
+			<p>pjjenkinson[at]gmail[dot]com</p>
+		</span>
 	</div>
 </div>
