--- a/app/css/pyrodev.css
+++ b/app/css/pyrodev.css
@@ -1,6 +1,6 @@
 /*========Theme with Comments ========
 white: #ecf0f1;
-black: #34495e;
+black: #000;
 orange: #e67e22;
 
 
@@ -118,11 +118,11 @@ a{
 .pyro-nav{
 	height: 80px;
 	width: 100%;
-	background-color: #34495e;
+	background-color: #000;
 	color: #ecf0f1;
 }
 .pyro-nav-container{
-	width: 90%;
+	width: 80%;
 	margin:auto;
 }
 .pyro-logo-wrapper{
@@ -152,7 +152,7 @@ a{
 	width: 100%;
 }
 .pyro-view-containter{
-	width: 90%; 
+	width: 80%; 
 	margin:auto;
 }
 
@@ -163,7 +163,7 @@ a{
 	width: 100%; 
 	left:0; 
 	height: 50px; 
-	background-color: #34495e; 
+	background-color: #000; 
 	color:#e67e22; 
 	text-align:center;
 }
@@ -174,7 +174,7 @@ a{
 .pyro-title-wrapper{
 	margin-top: 50px;
 	text-align: center;
-	width: 90%;
+	width: 80%;
 	position: absolute;
 	color: #ecf0f1;
 }
@@ -229,11 +229,12 @@ a{
 	font-size: 40px;
 	display: block;
 	float: left;
-	margin-top: 265px;
+	margin-top: 320px;
 	width: 30%;
 	color:#ecf0f1; 
 }
 .p-about-main-left{
+	margin: 50px 0px 0px 0px;
 	width:72%;
 	float:left;
 }
@@ -241,21 +242,24 @@ a{
 	color: #ecf0f1;
 	font-size: 30px;
 	width: 47%;
-	margin-right: 10px;
+	margin: 0px 15px 15px 0px;
 	text-align:center;
 	float:left;
 }
 .p-about-main-right{
-	width:20%;
+	width:27%;
 	float:left;
 }
 .p-about-right-text{
 	color: #ecf0f1;
 	font-size: 30px;
 	width: 100%;
-	margin-right: 5%;
+	margin: 40px 0px 0px 0px;
 	text-align: left;
 	float: left;
 	height: 100%;
+}
+.p-about-right-text p{
+	margin: 0px 0px 10px 0px;
 }
 
