--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,7 @@
-<div class="pyro-title-wrapper" >
-	<h1 class="pyro-title-name">PyroDev</h1>
-	<h2 class="pyro-title-slogan">PUT SOME FIRE IN IT</h2>
-	<h2 class="pyro-title-slogan">Currently Building. Pardon the Smoke...</h2>
+<div class="pyro-title-block">
+	<div class="pyro-title-wrapper" >
+		<h1 class="pyro-title-name">PyroDev</h1>
+		<h2 class="pyro-title-slogan">Web Developer</h2>
+		<h2 class="pyro-title-slogan">Currently Building. Pardon the Smoke...</h2>
+	</div>
 </div>
