--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,22 @@
 <div class="pyro-title-block">
 	<div class="pyro-title-wrapper" >
-		<h1 class="pyro-title-name">PyroDev</h1>
-		<h2 class="pyro-title-slogan">Web Developer</h2>
+		<!-- <h1 class="pyro-title-name">PyroDev</h1> -->
+		<h1 class="pyro-title-slogan">Web Development</h1>
 		<h2 class="pyro-title-slogan">Currently Building. Pardon the Smoke...</h2>
+	</div>
+</div>
+<div class="pyro-who-block ">
+	<div class="container">
+		<div class="pyro-who-left-block">
+			<p>
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.
+			</p>
+			<p>
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
+			</p>
+		</div>
+		<div class="pyro-who-right-block">
+			<img class="pyro-who-image image-responsive" src="./app/assets/cute-dog.png">
+		</div>
 	</div>
 </div>
