--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,11 +1,12 @@
-<div class="pyro-title-block">
+<div class="pyro-title-block" id="home">
 	<div class="pyro-title-wrapper" >
 		<!-- <h1 class="pyro-title-name">PyroDev</h1> -->
 		<h1 class="pyro-title-slogan">Web Development</h1>
 		<h2 class="pyro-title-slogan">Currently Building. Pardon the Smoke...</h2>
 	</div>
+	<div class="pyro-title-background"></div>
 </div>
-<div class="pyro-who-block ">
+<div class="pyro-who-block" id="about">
 	<div class="container">
 		<div class="pyro-who-left-block">
 			<p>
@@ -18,5 +19,10 @@
 		<div class="pyro-who-right-block">
 			<img class="pyro-who-image image-responsive" src="./app/assets/cute-dog.png">
 		</div>
+	</div>
+</div>
+<div class="pyro-resume-block" id="resume">
+	<div class="container">
+		<h1>This is the place for the RESUME.</h1>
 	</div>
 </div>
